config server added to promethus cofig

--- a/observability/provisioning/prometheus.yml
+++ b/observability/provisioning/prometheus.yml
@@ -30,3 +30,9 @@ scrape_configs:
       - targets: [ 'host.docker.internal:8004' ]
         labels:
           application: 'Payment Service'
+  - job_name: 'config-server'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: [ 'host.docker.internal:8078' ]
+        labels:
+          application: 'Config Server'
